Bug 510660 - Boosting a toot(post) doesn't update the count below it
Summary: Boosting a toot(post) doesn't update the count below it
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-15 23:15 UTC by Justin Zobel
Modified: 2025-10-16 22:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2025-10-15 23:15:46 UTC
SUMMARY
Boosting a toot(post) doesn't update the count below it

STEPS TO REPRODUCE
1. Open a toot
2. Boost it

OBSERVED RESULT
Counter is not updated

EXPECTED RESULT
Counter is updated

I experienced on 25.08.2 but redstrate confirmed on git master also.
Comment 1 Justin Zobel 2025-10-15 23:37:15 UTC
Same with favorites(star) button.
Comment 2 Joshua Goins 2025-10-16 22:13:16 UTC
Git commit 521150ec61d3a14ed9911b95371cb3fd1abfc8e3 by Joshua Goins.
Committed on 16/10/2025 at 22:13.
Pushed by redstrate into branch 'master'.

Increment or decrement favorite/reblog counter when interacting

M  +10   -0    src/datatypes/post.cpp
M  +2    -2    src/timeline/abstracttimelinemodel.cpp

https://invent.kde.org/network/tokodon/-/commit/521150ec61d3a14ed9911b95371cb3fd1abfc8e3
Comment 3 Joshua Goins 2025-10-16 22:13:43 UTC
Git commit 8d75a2ec4bc781f2f4d5c24fb9f61a77c8ca53a3 by Joshua Goins.
Committed on 16/10/2025 at 22:13.
Pushed by redstrate into branch 'release/25.08'.

Increment or decrement favorite/reblog counter when interacting
(cherry picked from commit 521150ec61d3a14ed9911b95371cb3fd1abfc8e3)

M  +2    -2    src/timeline/abstracttimelinemodel.cpp
M  +10   -0    src/timeline/post.cpp

https://invent.kde.org/network/tokodon/-/commit/8d75a2ec4bc781f2f4d5c24fb9f61a77c8ca53a3