Increment or decrement favorite/reblog counter when interacting

BUG: 510660